# python_automations_studying

./: README.md  buscaCEP.py  openCloseNotepad.py  openTerminal.py  pyproject.toml  requirements.txt  searchDollar.py
automations/notepad/: Alunos.txt  main.py  work_notepad.py
automations/pyautogui/: escolherOpcoes.py  openCloseNotepad.py
automations/requests/: buscaCEP.py  consultarCripto.py
automations/requests/consultarCripto/: consultarCripto.py  log_config.py
automations/selenium/: fazerCompras.py
automations/selenium/fazerCompras/: fazerCompras.py  logger.py
pyautogui/: escolherOpcoes.py  openCloseNotepad.py
selenium/: abrirGoogle.py
selenium/login/: fazerCompras.py  fechar_janela.au3
