[project]
name = "python_automations_studying"
version = "0.1.0"
description = "Este repositório reúne meus estudos e experimentações com automação usando Python"
authors = [
    {name = "HeitorDalla",email = "heitorvillavilla@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
name = "python_automations_studying"
version = "0.1.0"
description = "Este repositório reúne meus estudos e experimentações com automação usando Python"
authors = ["HeitorDalla <heitorvillavilla@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13"
pyautogui = ">=0.9.54,<0.10.0"
selenium = ">=4.35.0,<5.0.0"
webdriver-manager = ">=4.0.2,<5.0.0"
Pillow = ">=11.3.0,<12.0.0"
python-dotenv = ">=1.1.1,<2.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"